# PathoLens

./: .gitignore  README.md  gene_esm_embedder.py  go_node2vec.py  optimize_node2vec.py  pyproject.toml  sources.txt  train.py  vep_pipeline.py
configs/: pipeline.example.toml  pipeline.full.toml  pipeline.local.toml  pipeline.missense.toml
doc/: diagram.plantuml
scratch/: 20250918_results_full.txt  20250922_results_missense.txt  20250924_ablation_results_missense.txt  20250925__ablation_results_missense.txt  20250926_full_results.txt  20250926_mlp_probe.txt  20250927_missense_results.txt  20250928_full_results.txt  20251002_missense_results_cnn.txt  ablation_results.txt  esm_delta_df.py  example_prompts.txt  go_n2v_optim.json  ml_test_results.md  mlp_results  mlp_test.py  mlp_test_v2.py  protein_embed.py  results.txt  scratch.py  vep_docker_install.sh
src/: clinvar.py  clip_eval.py  clip_trainer.py  dna_utils.py  go_n2v_utils.py  hp.py  llm.py  mlp_test.py  protein_utils.py  protein_utils_runner.py  seq_dataset.py  sequence_cache.py  text_utils.py
src/go/: gene_go_embeddings.py  optimize_node2vec.py
src/llm/: ablation.py  chat.py  config.py  context.py  data.py  eval.py  infer.py  load.py  modeling.py  sequence_encoder.py  train.py
src/pipeline/: __init__.py  builders.py  clinvar.py  config.py  datasets.py  manifest.py
