[project]
name = "varclip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "biopython>=1.85",
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "evaluate>=0.4.5",
    "lm-format-enforcer>=0.11.3",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "pyarrow>=21.0.0",
    "pyfaidx>=0.9.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "scipy>=1.11.4",
    "setuptools>=80.9.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "transformers>=4.56.0",
    "umap-learn>=0.5.9.post2",
]

[project.optional-dependencies]
cuda = ["bitsandbytes"]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]
